# substrate-oracle-parachain

./: .gitmodules  README.md
node/: Cargo.toml
node/.cargo/: config
node/src/: chain_spec.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
